# uned_crazyflie_ros_pkg

./: .gitignore  .gitmodules  README.md
uned_crazyflie_config/: CMakeLists.txt  Webots_rviz.perspective  package.xml
uned_crazyflie_config/launch/: PID_Verified.launch.py  Vicon.launch.py  crazyflie.launch.py  crazyflie_Gazebo.launch  crazyflie_Gazebo_Bitcraze.launch  crazyflie_Gazebo_JJAA.launch  crazyflie_Gazebo_Swarm.launch  crazyflie_Gazebo_Test.launch  crazyflie_PIDcontroller.launch  crazyflie_driver.launch  crazyflie_joystick.launch  crazyflie_sim.launch.py  crazyflie_sim_ebc.launch.py  crazyflie_sim_fuzzy.launch.py  crazyflie_simulacion.launch  crazyflie_simulacion_matlab.launch  crazyflie_vicon.launch.py  crazyflie_vicon_controller.launch.py  crazyflie_vicon_ebc.launch.py  crazyflie_vicon_ebs.launch.py  demo_swarm_formation_distance_four.launch.py  demo_swarm_formation_distance_seven.launch.py  demo_swarm_formation_distance_three.launch.py  demo_swarm_formation_distance_two.launch.py  demo_swarm_formation_distance_two_vicon.launch.py  demo_swarm_formation_pose_three.launch.py  demo_swarm_sphere_formation_distance_five.launch.py  demo_swarm_sphere_pc.launch.py  demo_swarm_sphere_rbp.launch.py  demo_swarm_teleop.launch.py  demo_swarm_teleop_LightHouse.launch.py  demo_swarm_teleop_vicon.launch.py  drone_joystick.launch  joystick.launch  rbp_swarm_teleop.launch.py  spawn_crazyflie_bot.py  spawn_mav_crazyflie.launch  spawn_robot.launch.py  start_gazebo.launch.py  swarm.launch.py  (+30 more)
uned_crazyflie_config/model/convert/: component_snippets.xacro  crazyflie2.sdf  crazyflie2.xacro  crazyflie2_base.xacro
uned_crazyflie_config/model/crazyflie2/: crazyflie2.sdf  model.config  model.sdf
uned_crazyflie_config/model/crazyflie2/meshes/: crazyflie.urdf
uned_crazyflie_config/model/urdf/: RoboticPark_simple.urdf  crazyflie2.xacro  crazyflie2_base.xacro  crazyflie_simple.urdf  test.urdf
uned_crazyflie_config/models/urdf/: multirotor_base.xacro
uned_crazyflie_config/msg/: Actuators.msg  CFCmdSignal.msg  Cmdsignal.msg  Pidcontroller.msg  StateEstimate.msg  Triggering.msg
uned_crazyflie_config/resource/: Robotic Park Lab.perspective  bridge.yaml  crazyflie_ros2_formation_distance.yaml  crazyflie_ros2_formation_distance_four.yaml  crazyflie_ros2_formation_distance_three.yaml  crazyflie_ros2_formation_distance_three_event.yaml  crazyflie_ros2_formation_distance_two.yaml  crazyflie_ros2_teleop_default.yaml  crazyflie_ros2_teleop_two.yaml  demo_swarm_formation_distance_five_sphere.yaml  demo_swarm_formation_distance_four.yaml  demo_swarm_formation_distance_nine.yaml  demo_swarm_formation_distance_three.yaml  demo_swarm_formation_distance_two.yaml  demo_swarm_teleop_LightHouse.yaml
uned_crazyflie_config/resources/: DSFD_2_dron01.yaml  DSFD_2_dron01e.yaml  DSFD_2_dron02.yaml  DSFD_2_dron02e.yaml  DSFD_3_dron01.yaml  DSFD_3_dron02.yaml  DSFD_3_dron03.yaml  DSFD_4_dron01.yaml  DSFD_4_dron02.yaml  DSFD_4_dron03.yaml  DSFD_4_dron04.yaml  DSFDs_5_dron01.yaml  DSFDs_5_dron02.yaml  DSFDs_5_dron03.yaml  DSFDs_5_dron04.yaml  DSFDs_5_dron05.yaml  DSFP_3_dron01.yaml  DSFP_3_dron02.yaml  DSFP_3_dron03.yaml  LightHouseV2_Geometry.yaml  crazyflie_extern_default.yaml  crazyflie_extern_event_default.yaml  crazyflie_intern_default.yaml  crazyflie_intern_event_default.yaml  demo_swarm_formation_distance_five_sphere.yaml  demo_swarm_formation_distance_four.yaml  demo_swarm_formation_distance_three.yaml  demo_swarm_formation_distance_two.yaml  demo_swarm_formation_distance_two_vicon.yaml  demo_swarm_formation_pose_three.yaml  demo_swarm_teleop_extern.yaml  swarm_teleop.yaml
uned_crazyflie_config/rqt/: Robotic Park Lab.perspective  Swarm_teleop_one.perspective
uned_crazyflie_config/rviz/: demo_swarm_formation.rviz  test.rviz
uned_crazyflie_config/srv/: AddTwoInts.srv
uned_crazyflie_controllers/: CMakeLists.txt  package.xml
uned_crazyflie_controllers/include/uned_crazyflie_controllers/: CrazyflieAttitudeController.h  CrazyflieAttitudeRateController.hpp  CrazyflieController.h  CrazyflieEventTriggering.hpp  CrazyflieFuzzyPositionController.hpp  CrazyfliePositionController.h  CrazyfliePositionController.hpp  CrazyflieRateMixerController.h  CrazyflieTrajectoryController.h  CrazyflieTrajectoryController.hpp
uned_crazyflie_controllers/include/uned_crazyflie_controllers/flc/: CMakeLists.txt  fuzzyController.c  fuzzyController.h
uned_crazyflie_controllers/msg/: AttitudeRateMixerRefs.msg  AttitudeRefs.msg  Cmdsignal.msg  RateMixerRefs.msg
uned_crazyflie_controllers/src/: continuos_pid_position_controller.cpp  discrete_pid_ratemixer_controller_node.cpp  event_triggering.cpp  eventbased_pid_position_controller.cpp  fuzzy_pid_position_controller.cpp  generalized_predictive_controller.cpp  periodic_pid_attitude_controller_node.cpp  periodic_pid_attituderate_controller.cpp  periodic_pid_position_controller.cpp  periodic_pid_position_controller_node.cpp  trajectory_controller.cpp  uned_crazyflie_attitude_controller_node.cpp  uned_crazyflie_controllers_node.cpp  uned_crazyflie_position_controller.cpp  uned_crazyflie_position_controller_node.cpp  uned_crazyflie_ratemixer_controller_node.cpp  uned_crazyflie_trajectory_controller_node.cpp
uned_crazyflie_controllers/src/uned_crazyflie_controller/: discrete_pid_attitude_controller.cpp  discrete_pid_position_controller.cpp  discrete_pid_ratemixer_controller.cpp  periodic_pid_attitude_controller.cpp  periodic_pid_position_controller.cpp  periodic_pid_ratemixer_controller.cpp  uned_crazyflie_attitude_controller.cpp  uned_crazyflie_position_controller.cpp  uned_crazyflie_ratemixer_controller.cpp  uned_crazyflie_trajectory_controller.cpp
uned_crazyflie_controllers/src/uned_crazyflie_controllers/: uned_crazyflie_controllers.cpp
uned_crazyflie_gazebo_plugin/: CMakeLists.txt  package.xml
uned_crazyflie_gazebo_plugin/include/uned_crazyflie_gazebo_plugin/: uned_crazyflie_gazebo_plugin.hpp
uned_crazyflie_gazebo_plugin/src/: uned_crazyflie_gazebo_plugin.cpp
uned_crazyflie_joystick/: CMakeLists.txt  package.xml
uned_crazyflie_joystick/src/: joystick_node.cpp
(+180 files in other folders)
