<?xml version="1.0"?>
<package format="3">
  <name>uned_crazyflie_config</name>
  <version>0.0.0</version>
  <description>The uned_crazyflie_config package</description>

  <maintainer email="fma527@ual.es">Francisco-Jose Manas Alvarez</maintainer>
  <author>Francisco-Jose Manas Alvarez </author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
 </package>
