<?xml version="1.0"?>
<package format="2">
  <name>uned_crazyflie_joystick</name>
  <version>0.0.0</version>
  <description>The uned_crazyflie_joystick package</description>

  <maintainer email="fma527@ual.es">Francisco-Jose Manas Alvarez</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <export>
  </export>
  
</package>
